<resources>
    <string name="app_name">yuyubuyer</string>
    <string name="rb_main_personal">个人</string>
    <string name="rb_main_order">订单</string>
    <string name="rb_main_news">消息</string>
    <string name="rb_main_buyer">BUYER</string>
    <string name="rb_main_shop">商铺</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bejiing">成都</string>
    <string name="qu">全城</string>
    <string name="ed_mainshop_hint">请输入商铺/品牌名称</string>
    <string name="item_shop_shop">商家</string>
    <string name="item_shop_shopname">谜底专卖店</string>
    <string name="item_shop_address">北京市海淀区清河中街68号五彩城购物中心</string>
    <string name="zhe">折</string>
    <string name="distance">距离</string>
    <string name="km">km</string>
    <string name="loadMore">正在加载...</string>
    <string name="login_password">忘记密码?</string>
    <string name="login_reg">新用户注册</string>
    <string name="login_hint_user">请输入账号/手机号</string>
    <string name="login_hint_password">请输入密码</string>
    <string name="login_check">请输入验证码</string>
    <string name="login">登录</string>
    <string name="register_phone">手机号</string>
    <string name="register_password">密\u3000码</string>
    <string name="register_check">验证码</string>
    <string name="register_et_phone">请输入手机号码</string>
    <string name="send_checkpassword">发送验证码</string>
    <string name="reg">注册</string>
    <string name="shop_evaluate">填写评价</string>
    <string name="shop_manyi">商品满意度:</string>
    <string name="content">评价内容:</string>
    <string name="shop_content">请在此处添加评价内容!</string>
    <string name="shop_commit">提交</string>
    <string name="main_news_title">消息</string>
    <string name="main_news_friendnews">好友消息</string>
    <string name="main_news_comment">动态评论</string>
    <string name="sys_news">系统消息</string>
    <string name="server">服务选项</string>
    <string name="buxian">不限</string>
    <string name="movie">视频指导</string>
    <string name="lineB">线下指导</string>
    <string name="sex">性别\u3000\u3000</string>
    <string name="man">男</string>
    <string name="women">女</string>
    <string name="status">状态\u3000\u3000</string>
    <string name="kongxian">空闲</string>
    <string name="busy">忙碌</string>
    <string name="reset">重置</string>
    <string name="decided">确定</string>
    <string name="credit">信用度</string>
    <string name="xingji">星级</string>
    <string name="click_login">点击登录</string>
    <string name="grade">会员等级</string>
    <string name="time">在线时长</string>
    <string name="xinyongdu">信用度</string>
    <string name="integr">积分</string>
    <string name="personal">个人接单</string>
    <string name="my">我的账户</string>
    <string name="safety">账户安全</string>
    <string name="my_evaluate">我的评价</string>
    <string name="my_collect">我的收藏</string>
    <string name="findPassword">找回密码</string>
    <string name="next">下一步</string>
    <string name="settingPassword">设置密码</string>
    <string name="newPassword">新密码</string>
    <string name="inputNewPassword">请输入新密码</string>
    <string name="decidedPassword">确定密码</string>
    <string name="nextinput">请再次输入密码</string>
    <string name="setdecided">确认</string>
    <string name="xuanze">筛选</string>
    <string name="sort">排序</string>
    <string name="buyerid">BUYER ID:</string>
    <string name="attention">关注</string>
    <string name="fans">粉丝</string>
    <string name="common_friend">好友</string>
    <string name="integral">积分</string>
    <string name="common_credit">信用度</string>
    <string name="time_line">在线时长</string>
    <string name="exit_money">退款申请</string>
    <string name="money_score">充值记录</string>
    <string name="bank_bound">银行卡绑定</string>
    <string name="tixian">提现记录</string>
    <string name="setting">设置</string>
    <string name="_188_00">188.00</string>
    <string name="my_order">我的订单</string>
    <string name="jia">评价</string>
    <string name="ordercount">订单量</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间:</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="personal_order">个人接单</string>
    <string name="line_order">线下接单</string>
    <string name="video">每条动态需添加文字和视频</string>
    <string name="send">发送</string>
    <string name="sendDong">添加动态</string>
    <string name="wo_account">我的账户</string>
    <string name="yuyu">我的鱼鱼币</string>
    <string name="e_188_00">0</string>
    <string name="_1_1">1鱼鱼币=1元现金</string>
    <string name="chong">充值</string>
    <string name="xian">提现</string>
    <string name="_10">（每次提现扣除10%手续费）</string>
    <string name="decide">确认充值</string>
    <string name="accountS">账户安全</string>
    <string name="mycollect">我的收藏</string>
    <string name="prompt">提示</string>
    <string name="ok">确定</string>
    <string name="mess">没有SD卡</string>
    <string name="jubao">举报</string>
    <string name="_0">0</string>
    <string name="buyer">鱼鱼BUYER养成指南</string>
    <string name="u3000_u3000_buyer1_0_buyer">\u3000\u3000鱼鱼BUYER1.0 一个时尚buyer的成长历程就是这样开始了...</string>
    <string name="buyer_60_buyer_buyer_buyer">\u3000\u3000buyer起源于60年代的欧洲，按照国际上通行的说法，buyer指的是往返于世界各地，时时关注最新的流行信息，掌握一定的流行趋势，追求完美时尚，并且手中掌握着大批量订单，他们普遍是以服装、鞋帽、珠宝等基本货物不停与一线品牌商进行交易，组织商品进入市场，满足消费者不同需求的人。buyer在穿着中透露着不凡的品味，穿梭于巴黎、米兰、纽约、东京等各大时装发布会，在顶级卖场里时常可以看到他们的身影，顶着被媒体喻为时尚界操盘手的光环，这就是在大众眼里一个时尚、神秘的职业——Buyer。</string>
    <string name="buyer_a">\u3000\u3000一星级（实习buyer）也许我们身在不同的领域，掌握并操控着自己的领地，但是我们对于时尚从未放弃过追逐，我们希望自己对于时尚的定义得到更多人的认同，并且可以从交流中得到属于自己的时尚元素。</string>
    <string name="buyer_buyer_buyer_buyer_coffee_buyer">\u3000\u3000二星级（初级buyer）恭喜您踏入了buyer的门槛，这时您在鱼鱼buyer已经拥有了自己志趣相投的朋友，您可以与您的新朋友相约一起去各商场购物，无趣或者疲倦的时候和朋友去打发一下闲暇的时光，鱼鱼buyer筛选出一些最出色的coffee和茶楼与我们签订协议，为二星级以上的buyer提供最优惠的服务。</string>
    <string name="buyer_buyer_buyer_buyer">\u3000\u3000三星级（中级buyer）我相信这时的您已经拥有的自己的圈子，鱼鱼buyer已经成为您生活一部分，您会利用一些时间登陆鱼鱼buyer获得自己想要的时尚信息，并且经常指导和请教其他buyer，通过交流加速您的成长。关于时尚您已经拥有了独立的思考模式，很多人会预约您为他们指导您专属的时尚定义。</string>
    <string name="buyer_buyer_buyer_vip_buyer2_0">\u3000\u3000四星级（高级buyer）当您到达这里的时候，首先恭喜您已经成为一名出色的时尚buyer，在鱼鱼buyer协议的所有品牌店与商户，您将得到vip的最高待遇，您将带着身后的追逐者一起进入鱼鱼buyer2.0寻找更大的突破。再次感谢您对时尚做出的贡献与分享。</string>
    <string name="buyer_buyer_buyer_buyer_buyer">\u3000\u3000五星级（特级buyer）恭喜您走完了鱼鱼buyer所有的历程，回顾经历，您会慢慢的体会着在鱼鱼buyer中的失与得，快乐与痛，无奈与神奇。好了！停止想象，我们说说待遇，除了得到鱼鱼buyer所有的线下优惠外，您将得到各品牌商的邀请函，免费前往我国以及世界各地参加各种活动，成为一名世界级的超级时尚buyer，与时尚大咖们角力，本公司将为与准备一份协议，让您有资格参与公司年终利润分红奖励。</string>
    <string name="de">\u3000\u3000人生就像一条路，这条路会决定你成为谁，但不会改变你是谁。</string>
    <string name="buyer_b">（鱼鱼buyer）</string>
    <string name="_1_buyer_buyer_buyer">\u3000\u30001．保护用户隐私是鱼鱼BUYER的一项基本政策，鱼鱼BUYER保证不对外公开或向第三方提供用户注册资料及用户在使用网络服务时存储在鱼鱼BUYER的非公开内容，但下列情况除外：</string>
    <string name="s">\u3000\u3000四、用户资料隐私保护</string>
    <string name="buyer_buyer">\u3000\u3000为保障用户的合法权益，避免在服务时因用户注册资料与真实情况不符而发生纠纷，请用户注册时务必按照真实、全面、准确的原则填写。对因用户自身原因而造成的不能服务情况，鱼鱼BUYER概不负责。如果用户提供的资料包含有不正确的信息，鱼鱼BUYER保留结束该用户使用服务资格的权利。</string>
    <string name="san">\u3000\u3000三、用户信息的提供</string>
    <string name="_2_buyer">\u3000\u30002．用户只有在获得鱼鱼BUYER或其他相关权利人的授权之后才能使用这些内容，而不能擅自复制、再造这些内容、或创造与内容有关的派生产品。</string>
    <string name="_1_buyer">\u3000\u30001．鱼鱼BUYER提供的网络服务内容可能包括：文字、软件、声音、图片、录象、图表等。所有这些内容受版权、商标和其它财产所有权法律的保护。</string>
    <string name="con">\u3000\u3000二、内容所有权</string>
    <string name="android_buyer_buyer">\u3000\u3000鱼鱼BUYER（www.yuyubuyer.com）（PC商户端，PC用户端 ，iOS用户端，android用户端）以下简称 “鱼鱼网”,根据相关法律、法规进行网上购买鱼鱼BUYER的产品和各种增值服务业务。依照本协议以下条款本网登记注册的会员（以下简称 “用户”），并同意以下服务条款，方有资格享受鱼鱼BUYER提供的相应服务，并受本协议条款的约束。</string>
    <string name="sc">\u3000\u3000一、服务协议的确定</string>
    <string name="buyer_agr">鱼鱼BUYER服务协议</string>
    <string name="u3000_u3000_u3000_a_n_u3000_u3000_u3000_b_n_u3000_u3000_u3000_c_n_u3000_u3000_u3000_d_n_u3000_u3000_u3000_e">　　　（a）事先获得用户的明确授权；\n　　　（b）根据有关的法律法规要求；\n　　　（c）按照相关政府主管部门的要求；\n　　　（d）为维护社会公众的利益；\n　　　（e）为维护建行的合法权益。</string>
    <string name="u3000_u30002_buyer_buyer_buyer">　　2．鱼鱼BUYER可能会与第三方合作向用户提供相关的网络服务，在此情况下，如该第三方同意承担与鱼鱼BUYER同等的保护用户隐私的责任，则鱼鱼BUYER可将用户的注册资料等提供给该第三方。</string>
    <string name="u3000_u30003_buyer">　　3． 在不透露单个用户隐私资料的前提下，鱼鱼BUYER有权对整个用户数据库进行分析并对用户数据库进行商业上的利用。</string>
    <string name="u3000_u3000">　　五、用户资料安全</string>
    <string name="u3000_u3000_buyer_buyer">　　对用户注册信息鱼鱼BUYER提供最大限度的安全保障。同时，用户务必对其用户密码、个人帐号等信息保密，以免被盗用或遭窜改。用户如发现上述情况请立即与鱼鱼BUYER联系。</string>
    <string name="u3000a">　　六、用户享有的权利和服务</string>
    <string name="u3000_u30001">　　1．用户有权随时对自己的个人资料进行查询、修改和删除。为客户服务安全考虑，帐号不能随意更改。</string>
    <string name="u3000_u30002_buyer">　　2．用户享有在鱼鱼BUYER所购买的各种服务内容。</string>
    <string name="u3000_u30003_buyer_buyer_buyer">　　3．鱼鱼BUYER网络服务的具体内容由鱼鱼BUYER根据实际情况提供，例如电子邮件、发表评论等。鱼鱼BUYER保留随时变更、中断或终止部分或全部网络服务的权利。</string>
    <string name="u3000_u30004_buyer_buyer">　　4．鱼鱼BUYER在提供网络服务时，可能会对部分网络服务（例如短信服务）的用户收取一定的费用。在此情况下，鱼鱼BUYER会在相关页面上做明确的提示。如用户拒绝支付该等费用，则不能使用相关的网络服务。</string>
    <string name="u3000_u30005_buyer">　　5．用户理解，鱼鱼BUYER仅提供相关的网络服务，除此之外与相关网络服务有关的设备（如电脑、调制解调器及其他与接入互联网有关的装置）及所需的费用（如为接入互联网而支付的电话费及上网费）均应由用户自行负担。</string>
    <string name="u300b">　　七、用户管理</string>
    <string name="u300c">　　不得利用本网危害国家安全、泄露国家秘密，不得侵犯国家社会集体的和公民的合法权益，不得利用本网制作、复制和传播下列信息：</string>
    <string name="u3000_u3000_u30001_n_u3000_u3000_u30002_n_u3000_u3000_u30003_n_u3000_u3000_u30004_n_u3000_u3000_u30005_n_u3000_u3000_u30006_n_u3000_u3000_u30007_n_u3000_u3000_u30008_n_u3000_u3000_u30009_n_u3000_u3000_u300010_n_u3000_u3000_u3000">　　　1．煽动抗拒、破坏宪法和法律、行政法规实施的；\n　　　2．煽动颠覆国家政权，推翻社会主义制度的；\n　　　3．煽动分裂国家、破坏国家统一的；\n　　　4．煽动民族仇恨、民族歧视，破坏民族团结的；\n　　　5．捏造或者歪曲事实，散布谣言，扰乱社会秩序的；\n　　　6．宣扬封建迷信、淫秽、色情、赌博、暴力、凶杀、恐怖、教唆犯罪的；\n　　　7．公然侮辱他人或者捏造事实诽谤他人的，或者进行其他恶意攻击的；\n　　　8．损害国家机关信誉的；\n　　　9．其他违反宪法和法律行政法规的；\n　　　10．进行商业广告行为的。\n　　　本网声明用户的的系统记录有可能作为用户违反法律的证据。</string>
    <string name="u3000d">　　八、免责声明</string>
    <string name="u3000_u30001_buyer_buyer_buyer">　　1．用户明确同意其使用鱼鱼BUYER网络服务所存在的风险将完全由其自己承担；因其使用鱼鱼BUYER网络服务而产生的一切后果也由其自己承担，鱼鱼BUYER对用户不承担任何责任。</string>
    <string name="u300uyer">　　2．鱼鱼BUYER不担保网络服务一定能满足用户的要求，也不担保网络服务不会中断，对网络服务的及时性、安全性、准确性也都不作担保。</string>
    <string name="u3d">　　九、服务变更、中断或终止</string>
    <string name="u3000_u30001_buyer">　　1．如因系统维护或升级的需要而需暂停网络服务，鱼鱼BUYER将尽可能事先进行通告。</string>
    <string name="u3syer">　　2．如发生下列任何一种情形，鱼鱼BUYER有权随时中断或终止向用户提供本协议项下的网络服务而无需通知用户：</string>
    <string name="u3000_u3000_u3000_a_n_u3000_u3000_u3000_b">　　　（a）用户提供的个人资料不真实；\n　　　（b）用户违反本协议中规定的使用规则。</string>
    <string name="u3000_u30003_buyer_buyer">　　3．除前款所述情形外，鱼鱼BUYER同时保留在不事先通知用户的情况下随时中断或终止部分或全部网络服务的权利，对于所有服务的中断或终止而造成的任何损失，鱼鱼BUYER无需对用户或任何第三方承担任何责任。</string>
    <string name="u300d0">　　十、违约赔偿</string>
    <string name="u3000_u300fyer">　　用户同意保障和维护鱼鱼BUYER及其他用户的利益，如因用户违反有关法律、法规或本协议项下的任何条款而给鱼鱼BUYER或任何其他第三人造成损失，用户同意承担由此造成的损害赔偿责任。</string>
    <string name="u3f">　　十一、修改协议</string>
    <string name="u3000_u30001_buyer_buyer">　　1．鱼鱼BUYER将可能不时的修改本协议的有关条款，一旦条款内容发生变动，鱼鱼BUYER将会在相关的页面提示修改内容。</string>
    <string name="fuyer">　　2．如果不同意鱼鱼BUYER对服务条款所做的修改，用户有权停止使用网络服务。如果用户继续使用网络服务，则视为用户接受服务条款的变动。</string>
    <string name="f000">　　十二、法律管辖</string>
    <string name="g0001">　　1．本协议的订立、执行和解释及争议的解决均应适用中国法律。</string>
    <string name="u300f2_buyer">　　2．如双方就本协议内容或其执行发生任何争议，双方应尽量友好协商解决；协商不成时，任何一方均可向鱼鱼BUYER所在地的人民法院提起诉讼。</string>
    <string name="v3000">　　十三、通知和送达</string>
    <string name="ug00">　　本协议项下所有的通知均可通过重要页面公告、电子邮件或常规的信件传送等方式进行；该等通知于发送之日视为已送达收件人。</string>
    <string name="gu3000">　　十四、其他规定</string>
    <string name="g01">　　1．本协议构成双方对本协议之约定事项及其他有关事宜的完整协议，除本协议规定的之外，未赋予本协议各方其他权利。</string>
    <string name="h002">　　2．如本协议中的任何条款无论因何种原因完全或部分无效或不具有执行力，本协议的其余条款仍应有效并且有约束力。</string>
    <string name="h03">　　3．本协议中的标题仅为方便而设，在解释本协议时应被忽略。</string>
    <string name="h000">　　本协议适用中华人民共和国法律，因任何一方出现违反法律的行为而造成协议条款的不能执行，都应由责任方自行负责并补偿由此而给对方造成的损失。</string>
    <string name="u3000_u3000_buyer">　　本协议最终解释权属于（鱼鱼BUYER)所有者。</string>
    <string name="app_tip">提示</string>
    <string name="getting_prepayid">正在加载...</string>
</resources>