<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorMain"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/ll_mainshop_h"
        android:background="@color/colorMainTitle"
        >

        <RelativeLayout
            android:id="@+id/rl_agreement_back"
            android:layout_width="@dimen/click_login_top"
            android:layout_height="match_parent">

            <ImageView
                android:layout_marginLeft="@dimen/tv_shop_marleft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/back_selector"
                />
        </RelativeLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/tv_main_qu"
                android:text="@string/buyer_agr"
                android:textSize="@dimen/tv_shop_t"
                android:textColor="@color/colorloginreg"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/iv_personal_h"
                android:text="@string/sc"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/iv_personal_h"
                android:text="@string/android_buyer_buyer"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/b_guide_top"
                android:text="@string/con"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/iv_personal_h"
                android:text="@string/_1_buyer"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/iv_personal_h"
                android:text="@string/_2_buyer"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/b_guide_top"
                android:text="@string/san"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/iv_personal_h"
                android:text="@string/buyer_buyer"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/b_guide_top"
                android:text="@string/s"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/iv_personal_h"
                android:text="@string/_1_buyer_buyer_buyer"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/iv_personal_h"
                android:text="@string/u3000_u3000_u3000_a_n_u3000_u3000_u3000_b_n_u3000_u3000_u3000_c_n_u3000_u3000_u3000_d_n_u3000_u3000_u3000_e"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/iv_personal_h"
                android:text="@string/u3000_u30002_buyer_buyer_buyer"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/iv_personal_h"
                android:text="@string/u3000_u30003_buyer"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/b_guide_top"
                android:text="@string/u3000_u3000"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/iv_personal_h"
                android:text="@string/u3000_u3000_buyer_buyer"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/b_guide_top"
                android:text="@string/u3000a"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/iv_personal_h"
                android:text="@string/u3000_u30001"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/iv_personal_h"
                android:text="@string/u3000_u30002_buyer"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/iv_personal_h"
                android:text="@string/u3000_u30003_buyer_buyer_buyer"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/iv_personal_h"
                android:text="@string/u3000_u30004_buyer_buyer"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/iv_personal_h"
                android:text="@string/u3000_u30005_buyer"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/b_guide_top"
                android:text="@string/u300b"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/iv_personal_h"
                android:text="@string/u300c"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/iv_personal_h"
                android:text="@string/u3000_u3000_u30001_n_u3000_u3000_u30002_n_u3000_u3000_u30003_n_u3000_u3000_u30004_n_u3000_u3000_u30005_n_u3000_u3000_u30006_n_u3000_u3000_u30007_n_u3000_u3000_u30008_n_u3000_u3000_u30009_n_u3000_u3000_u300010_n_u3000_u3000_u3000"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/b_guide_top"
                android:text="@string/u3000d"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/iv_personal_h"
                android:text="@string/u3000_u30001_buyer_buyer_buyer"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/iv_personal_h"
                android:text="@string/u300uyer"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/b_guide_top"
                android:text="@string/u3d"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/iv_personal_h"
                android:text="@string/u3000_u30001_buyer"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/iv_personal_h"
                android:text="@string/u3syer"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/iv_personal_h"
                android:text="@string/u3000_u3000_u3000_a_n_u3000_u3000_u3000_b"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/iv_personal_h"
                android:text="@string/u3000_u30003_buyer_buyer"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/b_guide_top"
                android:text="@string/u300d0"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/iv_personal_h"
                android:text="@string/u3000_u300fyer"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/b_guide_top"
                android:text="@string/u3f"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/iv_personal_h"
                android:text="@string/u3000_u30001_buyer_buyer"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/iv_personal_h"
                android:text="@string/fuyer"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/b_guide_top"
                android:text="@string/f000"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/iv_personal_h"
                android:text="@string/g0001"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/iv_personal_h"
                android:text="@string/u300f2_buyer"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/b_guide_top"
                android:text="@string/v3000"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/iv_personal_h"
                android:text="@string/ug00"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/b_guide_top"
                android:text="@string/gu3000"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/iv_personal_h"
                android:text="@string/g01"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/iv_personal_h"
                android:text="@string/h002"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/iv_personal_h"
                android:text="@string/h03"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/b_guide_top"
                android:text="@string/h000"
                />
            <TextView
                style="@style/serverAgreement"
                android:layout_marginTop="@dimen/b_guide_top"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:text="@string/u3000_u3000_buyer"
                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
