<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorMain"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/ll_mainshop_h"
        android:background="@color/colorMainTitle"
        >

        <RelativeLayout
            android:id="@+id/rl_growUp_back"
            android:layout_width="@dimen/click_login_top"
            android:layout_height="match_parent">

            <ImageView
                android:layout_marginLeft="@dimen/tv_shop_marleft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/back_selector"
                />
        </RelativeLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/tv_main_qu"
            android:text="@string/buyer"
            android:textSize="@dimen/tv_shop_t"
            android:textColor="@color/colorloginreg"
            />
        <TextView
            style="@style/buyerGrowUp"
            android:layout_marginTop="@dimen/iv_personal_ivh"
            android:text="@string/u3000_u3000_buyer1_0_buyer"
            />
        <TextView
            style="@style/buyerGrowUp"
            android:layout_marginTop="@dimen/tv_main_qu"
            android:text="@string/buyer_60_buyer_buyer_buyer"
            />
        <TextView
            style="@style/buyerGrowUp"
            android:layout_marginTop="@dimen/tv_main_qu"
            android:text="@string/buyer_a"
            />
        <TextView
            style="@style/buyerGrowUp"
            android:layout_marginTop="@dimen/tv_main_qu"
            android:text="@string/buyer_buyer_buyer_buyer_coffee_buyer"
            />
        <TextView
            style="@style/buyerGrowUp"
            android:layout_marginTop="@dimen/tv_main_qu"
            android:text="@string/buyer_buyer_buyer_buyer"
            />
        <TextView
            style="@style/buyerGrowUp"
            android:layout_marginTop="@dimen/tv_main_qu"
            android:text="@string/buyer_buyer_buyer_vip_buyer2_0"
            />
        <TextView
            style="@style/buyerGrowUp"
            android:layout_marginTop="@dimen/tv_main_qu"
            android:text="@string/buyer_buyer_buyer_buyer_buyer"
            />
        <TextView
            style="@style/buyerGrowUp"
            android:layout_marginTop="@dimen/tv_main_qu"
            android:text="@string/de"
            />
        <TextView
            android:layout_marginTop="@dimen/et_login"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:text="@string/buyer_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/tv_shop_t"
            android:textColor="@color/colorloginreg"
            />
    </LinearLayout>
    </ScrollView>

</LinearLayout>
